--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -292,7 +292,7 @@ input {
   left: 21%;
   top: 19%;
 }
-.close {
+.close-icon {
   position: absolute;
   right: 15px;
   top: 15px;
@@ -302,8 +302,8 @@ input {
   cursor: pointer;
   transform: scale(0.7);
 }
-.close:before,
-.close:after {
+.close-icon:before,
+.close-icon:after {
   position: absolute;
   left: 15px;
   content: " ";
@@ -311,10 +311,10 @@ input {
   width: 3px;
   background-color: #fff;
 }
-.close:before {
+.close-icon:before {
   transform: rotate(45deg);
 }
-.close:after {
+.close-icon:after {
   transform: rotate(-45deg);
 }
 .btn-submit,
@@ -334,6 +334,14 @@ input {
 }
 .modal-body .btn-submit {
   margin-top: 20px;
+}
+.reserve-confirm {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  min-height: 50vh;
+  font-weight: 400;
+  font-size: 2.25rem;
 }
 /* custom select styles */
 .custom-select {
